--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.4.4'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
 
-    implementation 'edu.rosehulman.csse.rosefire:rosefire-android-client:2.1.0'
+    //implementation 'edu.rosehulman.csse.rosefire:rosefire-android-client:2.1.0'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
