Added safe args so that the current activity is known.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'androidx.navigation.safeargs.kotlin'
 
 android {
     compileSdkVersion 29
@@ -53,6 +54,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-core:17.4.4'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     //implementation 'edu.rosehulman.csse.rosefire:rosefire-android-client:2.1.0'
 
