--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.2.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.navigation:navigation-fragment:2.3.0'
@@ -48,6 +49,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'androidx.media:media:1.1.0'
 
     implementation 'com.google.firebase:firebase-firestore:21.5.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
@@ -55,6 +58,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.4.4'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    apply plugin: 'com.android.application'
+    apply plugin: 'com.google.gms.google-services'
 
     //implementation 'edu.rosehulman.csse.rosefire:rosefire-android-client:2.1.0'
 
