--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.4.4'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
     apply plugin: 'com.android.application'
     apply plugin: 'com.google.gms.google-services'
 
